Fix base template path: use core/base_modern.html

--- a/core/templates/core/client_project_view.html
+++ b/core/templates/core/client_project_view.html
@@ -1,4 +1,4 @@
-{% extends "base_modern.html" %}
+{% extends "core/base_modern.html" %}
 {% load static i18n humanize currency_extras %}
 
 {% block title %}{{ project.name }} - {% trans "Project Overview" %}{% endblock %}
